syntax = "proto3";
package examples;
option go_package = "github.com/angzarr/angzarr/proto/examples;examples";
option java_package = "dev.angzarr.examples";
option java_multiple_files = true;
option csharp_namespace = "Angzarr.Examples";
option ruby_package = "Angzarr::Examples";

import "google/protobuf/timestamp.proto";

// =============================================================================
// Product Domain - manages product catalog and pricing
// =============================================================================

// Commands
message CreateProduct {
  string sku = 1;
  string name = 2;
  string description = 3;
  int32 price_cents = 4;
}

message UpdateProduct {
  string name = 1;
  string description = 2;
}

message SetPrice {
  int32 price_cents = 1;
}

message Discontinue {
  string reason = 1;
}

// Events
message ProductCreated {
  string sku = 1;
  string name = 2;
  string description = 3;
  int32 price_cents = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ProductUpdated {
  string name = 1;
  string description = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message PriceSet {
  int32 price_cents = 1;
  int32 previous_price_cents = 2;
  google.protobuf.Timestamp set_at = 3;
}

message ProductDiscontinued {
  string reason = 1;
  google.protobuf.Timestamp discontinued_at = 2;
}

// State (for snapshots)
message ProductState {
  string sku = 1;
  string name = 2;
  string description = 3;
  int32 price_cents = 4;
  string status = 5;  // "active", "discontinued"
}
